--- a/files/common.prod.env
+++ b/files/common.prod.env
@@ -7,3 +7,5 @@ DB_NAME="cleversite"
 DB_READ_PORT=3306
 DB_WRITE_PORT=3306
 MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
+RPC_AUTH_USER='admin'
+RPC_AUTH_PASSWORD='8Anzpv4'
