Remove composer from web-public install task

--- a/roles/cleversite/web-public/tasks/deploy-app.yaml
+++ b/roles/cleversite/web-public/tasks/deploy-app.yaml
@@ -20,10 +20,10 @@
     path: "{{ app_path }}/cleversite/vendor"
     state: absent
 
-- name: Устанавливаю зависимости
-  shell: composer install -n 
-  args:
-    chdir: "{{ app_path }}/cleversite"
+# - name: Устанавливаю зависимости
+#   shell: composer install -n 
+#   args:
+#     chdir: "{{ app_path }}/cleversite"
 
 - name: Удаляю ненужные директории
   file:
