Fix envfile location

--- a/cleversite-web-public.yaml
+++ b/cleversite-web-public.yaml
@@ -3,4 +3,4 @@
   roles:
   - cleversite/web-public
   vars:
-    envfile_src: "{{ app_src }}/../{{ envfile_local }}"
+    envfile_src: "{{ envfile_local }}"
