--- a/roles/cleversite/ws/tasks/deploy-app.yaml
+++ b/roles/cleversite/ws/tasks/deploy-app.yaml
@@ -1,6 +1,6 @@
 - name: Prepare fs
   file:
-    path: "{{app_path}}"
+    path: "{{ app_path }}"
     state: directory
     mode: "0777"
     owner: apache
@@ -8,43 +8,49 @@
 
 - name: Get application from git
   git:
-    repo: "{{app_git_repo}}"
-    dest: "{{app_path}}"
-    version: "{{app_release_commit}}"
+    repo: "{{ app_git_repo }}"
+    dest: "{{ app_path }}"
+    version: "{{ app_release_commit }}"
     force: yes
+
+
 - name: Install modules
   shell: npm install
   args:
-    chdir: "{{app_path}}"
+    chdir: "{{ app_path }}"
+    creates: "{{ app_path }}/node_modules"
   become_user: apache
 
 - name: add envfile
   copy:
-    dest: "{{app_path}}/.env"
-    src: "{{envfile}}"
+    dest: "{{ app_path }}/.env"
+    src: "{{ envfile }}"
+    mode: "0644"
+    owner: apache
+    group: apache
 
-- stat:
-    path: "{{app_current_release_path}}"
+- name: Read current release_path
+  stat:
+    path: "{{ app_current_release_path }}"
   register: current_stat
 
-- debug:
-    msg: "{{current_stat}}"
+
 
 - name: Backup current release
   when: current_stat.stat.exists == True and current_stat.stat.lnk_target != app_path
-  shell: "cp -P {{app_current_release_path}} {{app_backup_release_path}}"
+  shell: "cp -P {{ app_current_release_path }} {{ app_backup_release_path }}"
 
 
 - name: Switch current release
   file:
-    src: "{{app_path}}"
-    dest: "{{app_current_release_path}}"
+    src: "{{ app_path }}"
+    dest: "{{ app_current_release_path }}"
     state: link
     owner: apache
     group: apache
 
-#- name: Install as service
-#  import_tasks: service.yaml
+- name: Install systemd services
+  import_tasks: install-systemd-service.yaml
 
 #- name: Install nginx configs
 #  import_tasks: nginx.yaml
