Fix admin mysql credentials on staging

--- a/files/common.staging.env
+++ b/files/common.staging.env
@@ -3,3 +3,7 @@ DB_HOST='cs-test-lb01.servicecloud.info'
 DB_LOGIN='cleversite_app'
 DB_PASSWORD='cleversiteapp'
 DB_NAME='cleversite_staging'
+DB_ADMIN_LOGIN="cleversite_app"
+DB_ADMIN_PASSWORD="cleversiteapp"
+DB_READ_PORT=3306
+DB_WRITE_PORT=3306
