Добавил адрес сервиса фичей в env для тестинга и стейджа

--- a/files/staging.env
+++ b/files/staging.env
@@ -72,3 +72,5 @@ SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
 AMO_CRM_SUBDOMAIN='echernyatev'
 AMO_CRM_SEND_ENABLE='true'
 
+# FEATURE SERVICE
+FEATURE_URL='http://features.cleversite.k8s.staging.local/'
