--- a/files/testing.env
+++ b/files/testing.env
@@ -66,3 +66,7 @@ SERVER_1C_PASSWORD=''
 #AMOCRM
 AMO_CRM_SUBDOMAIN='echernyatev'
 AMO_CRM_SEND_ENABLE='true'
+
+# FEATURE SERVICE
+FEATURE_URL='http://features.cleversite.k8s.testing.local/'
+
