Добавил креды для 1с UTM

--- a/files/common.prod.env
+++ b/files/common.prod.env
@@ -9,3 +9,6 @@ DB_WRITE_PORT=3306
 MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
 RPC_AUTH_USER='admin'
 RPC_AUTH_PASSWORD='8Anzpv4'
+SERVER_1C_LOGIN='1c_web_services'
+SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
+
