--- a/files/common.prod.env
+++ b/files/common.prod.env
@@ -12,3 +12,10 @@ RPC_AUTH_PASSWORD='8Anzpv4'
 SERVER_1C_LOGIN='1c_web_services'
 SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
 
+AMQP_HOST='cs-clients01.servicecloud.info'
+AMQP_LOGIN='cleversite-prod'
+AMQP_PASSWORD='VDADxIH6rQnvcwwcjSyvOxffXRTzoqtG'
+AMQP_VIRTUALHOST='/cleversite-prod'
+
+
+
