--- a/files/common.prod.env
+++ b/files/common.prod.env
@@ -6,6 +6,7 @@ DB_ADMIN_PASSWORD="fF330qOuaVEM"
 DB_NAME="cleversite"
 DB_READ_PORT=3306
 DB_WRITE_PORT=3306
+DB_PORT=3306
 MEMCACHED_HOST="cs-web01.servicecloud.info:11211"
 RPC_AUTH_USER='admin'
 RPC_AUTH_PASSWORD='8Anzpv4'
