web-public: refactor symlinks

--- a/roles/cleversite/web-public-v2/tasks/rollback_release.yaml
+++ b/roles/cleversite/web-public-v2/tasks/rollback_release.yaml
@@ -15,3 +15,7 @@
     owner: apache
     group: apache
     force: yes
+
+
+- name: Сбрасываю OpCache
+  import_tasks: tasks/webserver/php-resetopcache.yml
