--- a/roles/cleversite/web-public-v2/tasks/activate_release.yaml
+++ b/roles/cleversite/web-public-v2/tasks/activate_release.yaml
@@ -6,6 +6,13 @@
     owner: apache
     group: apache
 
+- name: Включаю новый релиз
+  file:
+    src: "{{ current_release_path }}"
+    dest: "{{ active_release_path }}"
+    state: link
+    owner: apache
+    group: apache
 
 - name: Сбрасываю OpCache
   import_tasks: tasks/webserver/php-resetopcache.yml
