--- a/roles/cleversite/web-public-v2/tasks/main.yaml
+++ b/roles/cleversite/web-public-v2/tasks/main.yaml
@@ -11,19 +11,20 @@
 - include_tasks: backup_current_release.yaml
   when: task is not defined or task == 'deploy'
   vars:
-    current_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.active_release_path }}"
+    current_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.base_path }}/releases/current"
     backup_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.base_path }}/releases/backup"
 
 - include_tasks: activate_release.yaml
   when: task is not defined or task == 'deploy'
-  vars:
-    current_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.active_release_path }}"
+  vars:  
+    active_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.active_release_path }}"
+    current_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.base_path }}/releases/current"
     release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.base_path }}/releases/{{ release_name }}/www"
 
 - include_tasks: rollback_release.yaml
   when: task is defined and task == 'rollback'
   vars:
-    current_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.active_release_path }}"
+    current_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.base_path }}/releases/current"
     backup_release_path: "{{ app.prefix }}{{ app.namespace }}{{ app.base_path }}/releases/backup"
 
 
