Add rmq http port

--- a/files/common.prod.env
+++ b/files/common.prod.env
@@ -16,7 +16,9 @@ SERVER_1C_PASSWORD='j6ByyPRaHl9x8kslXi8R'
 AMQP_HOST='cs-clients01.servicecloud.info'
 AMQP_LOGIN='cleversite-prod'
 AMQP_PASSWORD='VDADxIH6rQnvcwwcjSyvOxffXRTzoqtG'
-AMQP_VIRTUALHOST='/cleversite-prod'
+AMQP_VIRTUALHOST='cleversite-prod'
+AMQP_HTTP_PORT=8080
+AMQP_PORT=8080
 
 
 
