--- a/inventories/cleversite-prod.yml
+++ b/inventories/cleversite-prod.yml
@@ -85,3 +85,70 @@ all:
         envfile_common: common-web-public.prod.env
       hosts:
         cs-web02.servicecloud.info: {}        
+
+
+    cleversite_ws:
+      vars:
+        git_user: deploy_user
+        git_token: Sx9sddM65H9QTimfnnKW
+        app_git_repo: "https://{{git_user}}:{{git_token}}@gitlab.servicecloud.info/cleversite/ws.git"
+        app_basepath: /var/www/app/cleversite-ws
+        app_path: "{{app_basepath}}/{{app_release_name}}"
+        app_current_release_path: /var/www/ws
+        app_backup_release_path: "{{app_basepath}}/backup"
+        app_release_name: deploy-test
+        app_release_commit: master
+        app_domain: ws.cleversite.staging.local
+      hosts:
+        sc-nodejs02.servicecloud.info:
+          ws_balancer: False
+          ws_worker: True
+          ws_ports:
+            - 6002
+            - 6003
+            - 6004
+            - 6005
+            - 6006
+            - 6007
+            - 6008
+            - 6009
+            - 6010
+            - 6011
+            - 6012
+            - 6013
+            - 6014
+            - 6015
+            - 6016
+            - 6017
+            - 6018
+            - 6019
+            - 6020
+            - 6021
+            - 6022
+            - 6023
+        sc-nodejs03.servicecloud.info:
+          ws_balancer: False
+          ws_worker: True
+          ws_ports:
+            - 6032
+            - 6033
+            - 6034
+            - 6035
+            - 6036
+            - 6037
+            - 6038
+            - 6039
+            - 6040
+            - 6041
+            - 6042
+            - 6043
+            - 6044
+            - 6045
+            - 6046
+            - 6047
+            - 6048
+            - 6049
+            - 6050
+            - 6051
+            - 6052
+            - 6053
