--- a/inventories/cleversite-staging.yml
+++ b/inventories/cleversite-staging.yml
@@ -138,6 +138,7 @@ all:
             dest: upload
         app_template_dest: "{{app_path}}/bitrix/templates/cleversite_dec2020"
         app_current_env_path: "{{app_basepath}}/.env"
+        crontab_source: .crontabs/staging.yaml
         webtemplate:
           app_basepath: /var/www/app/web-template
           app_path: "/var/www/app/web-template/{{app_release_name}}"
