--- a/inventories/cleversite-testing.yml
+++ b/inventories/cleversite-testing.yml
@@ -113,6 +113,7 @@ all:
             dest: upload        
         app_template_dest: "{{app_path}}/bitrix/templates/cleversite_dec2020"
         app_current_env_path: "{{app_basepath}}/.env"
+        custom_crontab_files: "/var/spool/cron"
         crontab_source: .crontabs/testing.yaml
         webtemplate:
           app_basepath: /var/www/app/web-template
