--- a/roles/cleversite/web/tasks/rollback-app.yaml
+++ b/roles/cleversite/web/tasks/rollback-app.yaml
@@ -20,14 +20,15 @@
   import_tasks: tasks/webserver/php-resetopcache.yml
 
 - stat:
-    path: "{{ app_backup_release_path }}/backup.crontab"
+    path: "{{ app_basepath }}/backup.crontab"
   register: restore_file
 
 - debug:
     msg: "{{ restore_file }}"
 
-- name: Восстанавливаю кронтаб из бэкапа
-  when: restore_file.stat.exists == True and restore_file.stat.isreg == True
+
+- name: Восстанавливаю кронтаб из бэкапа если симлинк
+  when: restore_file.stat.exists == True and restore_file.stat.islnk == True
   file:
     src: "{{restore_file.stat.lnk_target}}"
     dest: "{{app_path}}/{{app_release_name}}"
@@ -35,3 +36,12 @@
     owner: apache
     group: apache
     force: yes
+
+- name: Восстанавливаю кронтаб из бэкапа если файл регулярный
+  when: restore_file.stat.exists and restore_file.stat.isreg
+  copy:
+    src: "{{ app_basepath }}/backup.crontab"
+    dest: "{{custom_crontab_files}}/apache"
+    remote_src: yes
+    owner: apache
+    group: apache
