fix service mesh url

--- a/files/testing.env
+++ b/files/testing.env
@@ -76,7 +76,7 @@ FEATURE_URL='http://features.cleversite.k8s.testing.local/'
 USE_HTTPS=false
 
 # SERVICE MESH
-SERVICE_MECH_URL=http://services.cleversite.k8s.testing.local
+SERVICE_MECH_URL=http://localhost:12345
 
 # SETTINGS
 GEO_IP_BREAK_TIME=5000
