--- a/files/prod.env
+++ b/files/prod.env
@@ -85,7 +85,7 @@ USE_HTTPS=true
 FEATURE_URL='http://features.cleversite.k8s.prod.local'
 
 # SERVICE MESH
-SERVICE_MECH_URL=http://services.cleversite.k8s.prod.local
+SERVICE_MECH_URL=http://localhost:12345
 
 # SETTINGS
 GEO_IP_BREAK_TIME=5000
