--- a/files/staging.env
+++ b/files/staging.env
@@ -83,7 +83,7 @@ FEATURE_URL='http://features.cleversite.k8s.staging.local/'
 USE_HTTPS=false
 
 # SERVICE MESH
-SERVICE_MECH_URL=http://services.cleversite.k8s.staging.local
+SERVICE_MECH_URL=http://localhost:12345
 
 # SETTINGS
 GEO_IP_BREAK_TIME=5000
