add var to app modes

--- a/files/prod.env
+++ b/files/prod.env
@@ -79,6 +79,7 @@ AMO_CRM_SUBDOMAIN='echernyatev'
 AMO_CRM_SEND_ENABLE='true'
 
 # APP MODES
+DEVELOPMENT_MODE=false
 USE_HTTPS=true
 
 # FEATURE SERVICE
