--- a/files/staging.env
+++ b/files/staging.env
@@ -80,6 +80,7 @@ AMO_CRM_SEND_ENABLE='true'
 FEATURE_URL='http://features.cleversite.k8s.staging.local/'
 
 # APP MODES
+DEVELOPMENT_MODE=true
 USE_HTTPS=false
 
 # SERVICE MESH
