--- a/files/testing.env
+++ b/files/testing.env
@@ -73,6 +73,7 @@ AMO_CRM_SEND_ENABLE='true'
 FEATURE_URL='http://features.cleversite.k8s.testing.local/'
 
 # APP MODES
+DEVELOPMENT_MODE=true
 USE_HTTPS=false
 
 # SERVICE MESH
