--- a/roles/cleversite/web/tasks/operations-with-cron.yaml
+++ b/roles/cleversite/web/tasks/operations-with-cron.yaml
@@ -7,14 +7,14 @@
     cron_file: "{{app_basepath}}/{{app_release_name}}.crontab"
     job: php {{app_current_release_path}}/{{item.script}} >> {{item.log}}
     name: "{{ item.description }}"
-    minute: "{{s item.minute }}"
+    minute: "{{ item.minute }}"
     hour: "{{ item.hour | default('*')}}"
     day: "{{ item.day | default('*') }}"
     weekday: "{{ item.weekday | default('*') }}"
     month: "{{ item.month | default('*') }}"
     state: present
     user: apache
-    with_items: "{{ crontab_content.stdout | from_yaml }}"
+  with_items: "{{ crontab_content.stdout | from_yaml }}"
 
 - name: Изменение прав доступа
   file:
