--- a/roles/cleversite/web/tasks/operations-with-cron.yaml
+++ b/roles/cleversite/web/tasks/operations-with-cron.yaml
@@ -3,23 +3,32 @@
   register: crontab_content
 
 - name: Создание .crontab
-  cron:
-    cron_file: "{{app_basepath}}/{{app_release_name}}.crontab"
-    job: php {{app_current_release_path}}/{{item.script}} >> {{item.log}}
-    name: "{{ item.description }}"
-    minute: "{{ item.minute }}"
-    hour: "{{ item.hour | default('*')}}"
-    day: "{{ item.day | default('*') }}"
-    weekday: "{{ item.weekday | default('*') }}"
-    month: "{{ item.month | default('*') }}"
-    state: present
-    user: apache
-  with_items: "{{ crontab_content.stdout | from_yaml }}"
-
-- name: Изменение прав доступа
-  file:
-    path: "{{app_basepath}}/{{app_release_name}}.crontab"
-    state: file
-    mode: 0660
+  # cron:
+  #   cron_file: "{{app_basepath}}/{{app_release_name}}.crontab"
+  #   job: php {{app_current_release_path}}/{{item.script}} >> {{item.log}}
+  #   name: "{{ item.description }}"
+  #   minute: "{{ item.minute }}"
+  #   hour: "{{ item.hour | default('*')}}"
+  #   day: "{{ item.day | default('*') }}"
+  #   weekday: "{{ item.weekday | default('*') }}"
+  #   month: "{{ item.month | default('*') }}"
+  #   state: present
+  #   user: apache
+  template:
+    src: crontab.j2
+    dest: "{{app_basepath}}/{{app_release_name}}.crontab"
     owner: apache
     group: apache
+    mode: "0600"
+  vars:
+    cronjobs: "{{ crontab_content.stdout | from_yaml }}"
+    app_base_path: "{{app_basepath}}/{{app_release_name}}/"
+    app_log_path: "/var/log/cleversite"
+
+#- name: Изменение прав доступа
+#  file:
+#    path: "{{app_basepath}}/{{app_release_name}}.crontab"
+#    state: file
+#    mode: 0660
+#    owner: apache
+#    group: apache
