--- a/files/staging.env
+++ b/files/staging.env
@@ -54,8 +54,8 @@ PULT_PORT=3000
 BASIC_AUTH="clever-123jh123lzxlcgjxclv"
 
 
-CAPTCHA_ENABLED=false
-CAPTCHA_SECRET_KEY="6Lc5wAwbAAAAAAUaFKXsMnggNTNYX6QnC8vl_6kk"
+CAPTCHA_ENABLED=true
+CAPTCHA_SECRET_KEY="6LdOw4QgAAAAAKAOOMSTNlnK-i3CeSmxckd5f_iT"
 CAPTCHA_SITE_KEY='6LcAwuEZAAAAAL20DGIh40LL4FOk3R9JO8v7e18K'
 CAPTCHA_SECRET='6LcAwuEZAAAAANvdbZpEPBiIRKz7jClo3GPdonsC'
 
