--- a/roles/cleversite/web/tasks/deploy-app.yaml
+++ b/roles/cleversite/web/tasks/deploy-app.yaml
@@ -19,7 +19,7 @@
     state: absent
 
 - name: Устанавливаю зависимости
-  shell: composer install -n 
+  shell: composer install -n --no-dev
   args:
     chdir: "{{app_path}}/cleversite"
 
