--- a/files/testing.env
+++ b/files/testing.env
@@ -69,6 +69,9 @@ SERVER_1C_PASSWORD=''
 AMO_CRM_SUBDOMAIN='echernyatev'
 AMO_CRM_SEND_ENABLE='true'
 
+#BITRIX_DEBUG
+BITRIX_DEBUG=true
+
 # FEATURE SERVICE
 FEATURE_URL='http://features.cleversite.k8s.testing.local/'
 
