added deploy for php 7.4 and 8.0

--- a/cleversite-web.yaml
+++ b/cleversite-web.yaml
@@ -1,4 +1,20 @@
 - hosts:
   - cleversite_web
   roles:
-  - cleversite/web
+    - role: cleversite/web
+      vars:
+        php_v: '7.2'
+      when: php_v == '7.2'
+
+    - role: cleversite/web
+      vars:
+        php_v: '7.4'
+      when: php_v == '7.4'
+    
+    - role: cleversite/web
+      vars:
+        php_v: '8.0'
+      when: php_v == '8.0'
+
+   
+    
